>实现了设备参数设定界面的更改内容 >同时修改了datapool中设备参数页面相关参数的修改，扩展到了4*8个元素

--- a/AdvaMACSystem/PageViewPara_Cylinder.resx
+++ b/AdvaMACSystem/PageViewPara_Cylinder.resx
@@ -117,6 +117,83 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="imageLabel_subidbk.BackImg" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        R0lGODlhpgAjAIcAAMdKosRBnsE4mb8xlb8ylL80lM1drMpUp9BmseWo09Z5uuiz2dNvte/J5Ou+3tmC
+        v9yLxPLV6t+VyfXg785/ruGdzuGezr82k+/v7/n5+f7+/t6RyNqfwvr6+urq6vPz8784k7+/v/f39/j4
+        +Mhvo+np6e3t7fv7+7Ave7xPj/Tq8PXr8fz8/PT09Le3t+Xl5cJfmfX19fHd6fLf6v39/czMzNSPuN/f
+        376+vuzP4MbGxvDw8Ly8vNWDuMrKytuGwvjv9OvN39nZ2eHh4a4ZeNPT068ce9d8u8fHx+7u7rEgfdRz
+        t+CvzOTk5K4YeeDg4LIlf+Li4sLCwvDS5q4qeK4aeNzc3K4beOvr675Ikrs1jrU9hN6oybU7g68pesRG
+        ncVJnfPc660mdvHx8deIvdJ4tMVmnteHvLEvfeKsz8FUmPLo7sttqctaqb9VlNJytOrH3dBwsKkdcOPj
+        48Zqob9Olb9JlLU8hLlCi89krrUuhK0nd9WFubg3ic1gqt2axufn58JXmcNZm7m5udV6uawjdbEkfctk
+        qakXcNjY2LwykL5Tk9yMxb4/k81fq729vbQqgs9mrtBssbczh9iTvs1frMZLoMFEmbo8i8pxpq4ieK0l
+        dshio/ft8853rs5qrdN+ttTU1MTExOCcy8VNnrYqhakZcKwkdMFSl+W91NmFv+i62MhUorIyf6secq8v
+        e+jo6MPDw71Pkb8/lL9FlLAge7lBisNMnLAmfOKlz92RxtbW1roxjbY3hcZdoakcb9R6t7W1tfb29svL
+        y9vb26oecurF3a8teuq93Lk8i9mOwMxtq85trdB1schao+Knzrq6ustwqNWBubYkh8I9mbYlhtra2rw3
+        kdmKv7MygLgqitWGuqURas9osKofccdPoMFFmOKvzr9IlK4od6sfc8VTn9J5tdqZwaodcasgc7Q5guew
+        18DAwPz2++Sn0vnr9fLy8ua/1uzs7LY/hf///////wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        ACH/C05FVFNDQVBFMi4wAwEBAAAh+QQBAAD1ACwAAAAApgAjAAAI/wDrCRxIUIOID/ISKlzIsKHDhxAj
+        SpxIsaLFiwmTfOhAsKPHjhkwlIA3gka8kyhTqlzJsqXLlzBjypxJs+aMDjEwePig4aNPDRjkjeCQ4tS8
+        o0iTKl3KtKnTp1CjSp1KtSpSFCRkwCshwmfHDh5acHhFB067s2jTql3Ltq3bt3Djyp1Lt65aLnfmyTCB
+        wavADiVUpDAT5p3hw4gTK17MuLHjx5AjS55MuXG4LhxaYOn5EbCKLecmiB5NWrQxN+pSq17NurXr17Bj
+        y55Nu7Zt1ZmmlCY9ZVHmvh+xqECRJoLx48iNUzrGhJ7z59CjS59Ovbr169iza9/uHAgHOauSJ/+XxQFD
+        C48f4JGI1qC9+/ftkf0Cwr2+/fv482uP1wq+/01BANLVQBqUEAQaDiSo4IIKemKDfhBGKOGE06XwDIMM
+        /jFPDE9wVo8w8MDAxwIklmhiiYLEQ+GKLLaYHQXbnCgjHvG80MRA8qxATgI89uijj2qo6OKQRLZIASg/
+        JkkGDDsUwZkHHNRCCiuSvKGKLhVkqWWWdQhZ5Jdg4kdBM1uWqWUhIxTRVwY7kFAKCHDGCQIY3/gRyRFH
+        MJKFl2H26ad1FDCzwaCEFjqoJjkIYU09GcAzjyIXRCrppJNeweefmGZKwSE/dLrEEnlU0oYlX0Rq6Qs+
+        MOpoAay26uqrVVz/mumsYVKgBTWv5hqrPFJo0Og8BAQr7LDEEiErrcgOSUE1xDZLgLHyhMDCrwNUa+21
+        2DpxbLLcUkjBNNiGO4C20Z7wqwDopqvuukZs2+27+lGgzbr0CtBuub8GoO++/ParhLvwBlwfBbz0a3AA
+        /+LrKAAMN+zww1AALPDE2FFwzcMYAxCxwilccsDHIIccMiQSU2zydBTMIvLKBxgSjxXsnMCCCRQ0YsDN
+        OOecsx4ln+yzcxSAo/PQBiCyghCxsFCPBznggsDTUEcd9SQ9/3wyBbdIrbUjKMRQQw09YSCCGN0wYPbZ
+        aJ/dR9VWU0xBOWnHTYsNJvBAjEAZ0JyMAnz3/+1335iw3bbAFDjz9+GurGCFC/LguMYehDwg+eSUS24H
+        B4NnDh0Mn1ReuTgUYKADEhz95UE8pkCg+uqsqw6MN/RpPvgM3LTeehwojCBEMFF09AEGHPQiwfDEFz+8
+        L/PMILvV8ahjjvHFlzFOJ00M4kMGHmEAPDrYWOD99+BbsEwxVpVv/vnop68UCtlIEz74nKgjgwch4ND4
+        R9oHQQUqo7jj//8ADKAAB0jAAhrwgAhMoAIXyMABnsELJFDBC3QAjTl4CD0eGAoVbMGGHihjHSAMoQhH
+        SMISmvCEKEyhClfIwhayMBc96EEg0gGDVMDjBjzgwRBo4Jd6jCAK8hBBDodsQAL1GfGISEwiVFJAASas
+        AB4vqIELRAGLC3qFBUMIxQ3ksQN4ePGLYAyjGMdIxjKa8YxoTKMa18hGeOhkFzpwAQ4SEQN69PArTxgG
+        EqTAjj768Y+ADKQgB0nIQhrykIhMpCIXiQMXPMIHN+DJHX1Cjw58IAkYyaQmN8nJTmbSBGMQAQ/9EhAA
+        Ow==
+</value>
+  </data>
+  <data name="imageLabel_idbk.BackImg" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        R0lGODlhpgAjAIcAAMdKosRBnsE4mb8xlb8ylL80lM1drMpUp9BmseWo09Z5uuiz2dNvte/J5Ou+3tmC
+        v9yLxPLV6t+VyfXg785/ruGdzuGezr82k+/v7/n5+f7+/t6RyNqfwvr6+urq6vPz8784k7+/v/f39/j4
+        +Mhvo+np6e3t7fv7+7Ave7xPj/Tq8PXr8fz8/PT09Le3t+Xl5cJfmfX19fHd6fLf6v39/czMzNSPuN/f
+        376+vuzP4MbGxvDw8Ly8vNWDuMrKytuGwvjv9OvN39nZ2eHh4a4ZeNPT068ce9d8u8fHx+7u7rEgfdRz
+        t+CvzOTk5K4YeeDg4LIlf+Li4sLCwvDS5q4qeK4aeNzc3K4beOvr675Ikrs1jrU9hN6oybU7g68pesRG
+        ncVJnfPc660mdvHx8deIvdJ4tMVmnteHvLEvfeKsz8FUmPLo7sttqctaqb9VlNJytOrH3dBwsKkdcOPj
+        48Zqob9Olb9JlLU8hLlCi89krrUuhK0nd9WFubg3ic1gqt2axufn58JXmcNZm7m5udV6uawjdbEkfctk
+        qakXcNjY2LwykL5Tk9yMxb4/k81fq729vbQqgs9mrtBssbczh9iTvs1frMZLoMFEmbo8i8pxpq4ieK0l
+        dshio/ft8853rs5qrdN+ttTU1MTExOCcy8VNnrYqhakZcKwkdMFSl+W91NmFv+i62MhUorIyf6secq8v
+        e+jo6MPDw71Pkb8/lL9FlLAge7lBisNMnLAmfOKlz92RxtbW1roxjbY3hcZdoakcb9R6t7W1tfb29svL
+        y9vb26oecurF3a8teuq93Lk8i9mOwMxtq85trdB1schao+Knzrq6ustwqNWBubYkh8I9mbYlhtra2rw3
+        kdmKv7MygLgqitWGuqURas9osKofccdPoMFFmOKvzr9IlK4od6sfc8VTn9J5tdqZwaodcasgc7Q5guew
+        18DAwPz2++Sn0vnr9fLy8ua/1uzs7LY/hf///////wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        ACH/C05FVFNDQVBFMi4wAwEBAAAh+QQBAAD1ACwAAAAApgAjAAAI/wDrCRxIUIOID/ISKlzIsKHDhxAj
+        SpxIsaLFiwmTfOhAsKPHjhkwlIA3gka8kyhTqlzJsqXLlzBjypxJs+aMDjEwePig4aNPDRjkjeCQ4tS8
+        o0iTKl3KtKnTp1CjSp1KtSpSFCRkwCshwmfHDh5acHhFB067s2jTql3Ltq3bt3Djyp1Lt65aLnfmyTCB
+        wavADiVUpDAT5p3hw4gTK17MuLHjx5AjS55MuXG4LhxaYOn5EbCKLecmiB5NWrQxN+pSq17NurXr17Bj
+        y55Nu7Zt1ZmmlCY9ZVHmvh+xqECRJoLx48iNUzrGhJ7z59CjS59Ovbr169iza9/uHAgHOauSJ/+XxQFD
+        C48f4JGI1qC9+/ftkf0Cwr2+/fv482uP1wq+/01BANLVQBqUEAQaDiSo4IIKemKDfhBGKOGE06XwDIMM
+        /jFPDE9wVo8w8MDAxwIklmhiiYLEQ+GKLLaYHQXbnCgjHvG80MRA8qxATgI89uijj2qo6OKQRLZIASg/
+        JkkGDDsUwZkHHNRCCiuSvKGKLhVkqWWWdQhZ5Jdg4kdBM1uWqWUhIxTRVwY7kFAKCHDGCQIY3/gRyRFH
+        MJKFl2H26ad1FDCzwaCEFjqoJjkIYU09GcAzjyIXRCrppJNeweefmGZKwSE/dLrEEnlU0oYlX0Rq6Qs+
+        MOpoAay26uqrVVz/mumsYVKgBTWv5hqrPFJo0Og8BAQr7LDEEiErrcgOSUE1xDZLgLHyhMDCrwNUa+21
+        2DpxbLLcUkjBNNiGO4C20Z7wqwDopqvuukZs2+27+lGgzbr0CtBuub8GoO++/ParhLvwBlwfBbz0a3AA
+        /+LrKAAMN+zww1AALPDE2FFwzcMYAxCxwilccsDHIIccMiQSU2zydBTMIvLKBxgSjxXsnMCCCRQ0YsDN
+        OOecsx4ln+yzcxSAo/PQBiCyghCxsFCPBznggsDTUEcd9SQ9/3wyBbdIrbUjKMRQQw09YSCCGN0wYPbZ
+        aJ/dR9VWU0xBOWnHTYsNJvBAjEAZ0JyMAnz3/+1335iw3bbAFDjz9+GurGCFC/LguMYehDwg+eSUS24H
+        B4NnDh0Mn1ReuTgUYKADEhz95UE8pkCg+uqsqw6MN/RpPvgM3LTeehwojCBEMFF09AEGHPQiwfDEFz+8
+        L/PMILvV8ahjjvHFlzFOJ00M4kMGHmEAPDrYWOD99+BbsEwxVpVv/vnop68UCtlIEz74nKgjgwch4ND4
+        R9oHQQUqo7jj//8ADKAAB0jAAhrwgAhMoAIXyMABnsELJFDBC3QAjTl4CD0eGAoVbMGGHihjHSAMoQhH
+        SMISmvCEKEyhClfIwhayMBc96EEg0gGDVMDjBjzgwRBo4Jd6jCAK8hBBDodsQAL1GfGISEwiVFJAASas
+        AB4vqIELRAGLC3qFBUMIxQ3ksQN4ePGLYAyjGMdIxjKa8YxoTKMa18hGeOhkFzpwAQ4SEQN69PArTxgG
+        EqTAjj768Y+ADKQgB0nIQhrykIhMpCIXiQMXPMIHN+DJHX1Cjw58IAkYyaQmN8nJTmbSBGMQAQ/9EhAA
+        Ow==
+</value>
+  </data>
   <metadata name="$this.FormFactorShadowProperty" xml:space="preserve">
     <value>WEBPAD</value>
   </metadata>
